# MPI

./: MPI_Aint.cpp  MPI_Bcast.cpp  MPI_Bcast_1.cpp  MPI_Byte.cpp  MPI_Cart_create.c  MPI_Cart_create.cpp  MPI_Isend_Irecv.cpp  MPI_Pack.cpp  MPI_Pack_1.cpp  MPI_Probe.c  MPI_Reduce.cpp  MPI_Scan.cpp  MPI_Scatterv.cpp  MPI_SendRecv.cpp  MPI_Spawn.cpp  MPI_Type_contiguous.cpp  MPI_Type_create_indexed_block.c  MPI_Type_create_struct.cpp  MPI_Type_struct.cpp  MPI_Type_struct_1.cpp  MPI_Type_vector.cpp  README.md  Syntax_C++.cpp
ARCHER UK National Supercomputing Service/cfd_haloSwap/F-MPI/: boundary.f90  cfd.f90
ARCHER UK National Supercomputing Service/cfd_haloSwap/F-SER/: Makefile  cfd.f90
ARCHER UK National Supercomputing Service/fractal_taskFarm/: Makefile  fractal.pbs
ARCHER UK National Supercomputing Service/sharpen_subsetOfPixel/C-MPI/: Makefile  Makefile-eddie  sharpen-eddie.sge
ARCHER UK National Supercomputing Service/sharpen_subsetOfPixel/C-OMP/: Makefile
ARCHER UK National Supercomputing Service/sharpen_subsetOfPixel/C-SER/: Makefile  Makefile-eddie  dacsharpen.pbs
ETH_course/: CMakeLists.txt  build.sh  dvector.hpp  errors.cpp  example2.cpp  grouped_simpson1.cpp  listvector.cpp  mpi_threaded.cpp  particles1.cpp  particles2.cpp  pdaxpy.cpp  pddot.cpp  pdgemm1.cpp  pdgemm2.cpp  pdgemv1.cpp  pdgemv2.cpp  pdgemv3.cpp  pdscal.cpp  scalapack.cpp  simpson5.cpp  simpson6.cpp  simpson_hybrid.cpp  simpson_omp.hpp  topology1.cpp  topology2.cpp  types.cpp
Ring/: Readme.md  ring1ba.c  ring1bb.c
(+9 files in other folders)
