cmake_minimum_required(VERSION 2.8)
find_package(MPI)
find_package(BLAS)
find_package(ScaLAPACK)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
include_directories(${MPI_CXX_INCLUDE_PATH})
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${MPI_CXX_LINK_FLAGS}")
set (FILES deadlock1 deadlock2 deadlock3 deadlock4 deadlock5 diffusion1d diffusion1d_nonblocking errors example1 example2 series1 series2 series3 simpson1 simpson2 simpson3 simpson4 simpson5 simpson6 listvector particles1 particles2 types topology1 topology2 grouped_simpson1)
set (FILES2 pdgemv1 pdgemv2 pdgemv3 pdgemm1 pdgemm2)
foreach(f ${FILES})
  add_executable(${f} ${f}.cpp)
  target_link_libraries(${f} ${MPI_CXX_LIBRARIES})
endforeach(f ${FILES})  
foreach(f ${FILES2})
  add_executable(${f} ${f}.cpp)
  target_link_libraries(${f} ${MPI_CXX_LIBRARIES} ${BLAS_LIBRARIES})
endforeach(f ${FILES})  

